# risksim

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.py
datasets/: BAS.DE.csv  FME.DE.csv  NSU.DE.csv  SIE.DE.csv  VOW3.DE.csv
src/risksim/: __init__.py
src/risksim/copula/: __init__.py  copula.py
src/risksim/experiment/: __init__.py  experiment.py
src/risksim/plot/: __init__.py  plotting.py
src/risksim/risk/: __init__.py  risk.py
src/risksim/utils/: __init__.py  utils.py
streamlit-app/: app.py  requirements.txt
